Mod. Videos Index

--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -20,6 +20,16 @@
         </nav>    
     </header>
 
+<!--                   VIDEO PRINCIPAL             -->
+
+<section class="container text-center text-white my-5 px-3">
+    <h3 class="mb-4">Video Destacado</h3>
+    <div class="ratio ratio-16x9 mx-auto" style="max-width: 100%;">
+        <video controls poster="images/vide_thumbnail.jpg">
+            <source src="videos/FixedAmanecer.mp4" type="video/mp4">
+        </video>
+    </div>
+</section>
 
     <main>
         <h1>Multiedia</h1>
