--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Recursos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Recursos - PedalSoul</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- GLightbox (Imágenes + Videos) -->
+  <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+
+  <!-- Tu CSS -->
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <a href="../index.html">Inicio</a>
-                <a href="categorias_de_ciclismo.html">Categorías de Ciclismo</a>
-                <a href="comunidad.html">Comunidad</a>
-                <a href="multimedia.html">Multimedia</a>
-                <a href="#">Recursos</a>
-            </ul>
-        </nav>    
-    </header>
+<header class="text-white text-center py-4 bg-dark">
+<!--Navegación-->
+    <nav>
+        <ul class="nav justify-content-center">
+                <li class="nav-item"><a class="nav-link text-white" href="../index.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="comunidad.html">Comunidad</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="multimedia.html">Multimedia</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="categorias_de_ciclismo.html">Categorías de Ciclismo</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="#">Recursos</a></li>
+        </ul>
+    </nav>
+    <h1 class="logo">Recursos</h1>
+  <p class="lead">Acá podrás encontrar tips, guias y mucha más información para que nunca salgas a la ruta sol@.</p>
+</header>
 
-    <main>
-        <h1>Recursos</h1>
-    </main>
+<main class="container text-white my-5">
+  <h2 class="text-center mb-4">Recursos para ciclistas</h2>
+  <div class="row g-4">
+    <div class="col-md-6">
+<!--Menú sin configurar aún-->
+      <ul>
+        <li><a href="......" class="text-white">Mapa de rutas urbanas</a></li>
+        <li><a href="....." class="text-white">Talleres recomendados</a></li>
+        <li><a href="...." class="text-white">Guías de seguridad</a></li>
+        <li><a href="...." class="text-white">Apps útiles para ciclismo</a></li>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <img src="../images/BiciGeneral.jpg" class="img-fluid rounded" alt="recursos bici">
+    </div>
+  </div>
+</main>
 
-    <footer>
-    </footer>
+<footer class="text-center text-white py-4 border-top border-secondary mt-5">
+  © 2025 PedalSoul - Todos los derechos reservados.
+</footer>
 
 </body>
 </html>
