--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
         <!-- MIS ESTILOS -->
         <link rel="stylesheet" href="css/style.css"/>
+        
+
     </head>
 
 
@@ -27,18 +29,7 @@
     <button class="floating-btn" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</button>
 
 <!--Encabezado-->
-<header class="hero-header text-white text center py-4">
-
-<!-- Menú estilo app-->
-    <nav class="navbar-expand-md">
-        <ul class="menu-links">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="pages/comunidad.html">Comunidad</a></li>
-            <li><a href="pages/multimedia.html">Multimedia</a></li>
-            <li><a href="pages/categorias_de_ciclismo.html">Categorías</a></li>
-            <li><a href="pages/recursos.html">Recursos</a></li>
-        </ul>
-    </nav>
+<header class="hero-header text-white text-center py-4">
 
     <h1 class="logo">PedalSoul</h1>
 
@@ -55,7 +46,7 @@
 
 <!--Barra de búsqueda-->
     <form class="d-flex justify-content-center">
-        <input class="form-control w-50 me-2 rounded" type="search" placeholder="Buscar..."/>
+        <input class="input-group w-50 me-2 rounded" type="search" placeholder="Buscar..."/>
         <button class="btn btn-outline-light" type="submit">🔍</button>
     </form>
 </header>
@@ -75,10 +66,10 @@
     <div class="row g-4 align-items-start">
 
 <!--Video 1 Vertical Izquierda-->
-    <article class="col-12 col-md-3">
+    <article class="col-12 col-md-3 center-vertical">
         <div class="card h-100 shadow-sm bg-transparent border-0 text-white">
             <div class="ratio ratio-9x16">
-                <video autoplay muted poster="images/VideoImageFixedAmanecerVertical.jpg">
+                <video autoplay muted controls poster="images/VideoImageFixedAmanecerVertical.jpg">
                     <source src="videos/FixedAmanecerVertical.mp4" type="video/mp4">
                 </video>
             </div>
@@ -92,7 +83,7 @@
     <article class="col-12 col-md-6">
         <div class="card h-100 shadow-sm bg-transparent border-0 text-white mb-3">
             <div class="ratio ratio-16x9">
-                <video autoplay muted poster="images/VideoImageMtbSubidaHorizontal.jpg">
+                <video autoplay muted controls poster="images/VideoImageMtbSubidaHorizontal.jpg">
                     <source src="videos/MTBSubidaHorizontal.mp4" type="video/mp4">
                 </video>
             </div>
@@ -118,10 +109,10 @@ Animate a participar y comparte tu forma de ver el mundo sobre ruedas.
 
 
 <!--Video 3 Vertical Derecha-->
-        <article class="col-12 col-md-3">
+        <article class="col-12 col-md-3 center-vertical">
             <div class="card h-100 shadow-sm bg-transparent border-0 text-white">
                 <div class="ratio ratio-9x16">
-                    <video autoplay muted poster="images/videoimageMtbSunsetVertical.jpg">
+                    <video autoplay muted controls poster="images/videoimageMtbSunsetVertical.jpg">
                         <source src="videos/mtbSunsetVertical.mp4" type="video/mp4">
                     </video>
             </div>
@@ -134,43 +125,102 @@ Animate a participar y comparte tu forma de ver el mundo sobre ruedas.
     </div>
 </section>
 
-<!--Galeria de imágenes-->
 
-    <section class="container my-5 px-3 bg-dark bg-opacity-75 text-white p-4 rounded">
-        <h3 class="text-white text-center mb-4">Galería de Fotos</h3>
-        <div class="row">
+<!-- Galería de fotos -->
 
-        <div class="col-md-3">
-            <div class="row g-3">
-                <div class="col-12">
-                    <img src="images/FixedCastillo.jpg" alt="Foto 1" class="img-fluid rounded shadow w-100 hover-img" data-hover="1">
-                </div>
-                <div class="col-6">
-                    <img src="images/BiciGeneral.jpg" alt="Foto 2" class="img-fluid rounded shadow hover-img" data-hover="2">
-                </div>
-                <div class="col-6">
-                    <img src="images/BikeBlue.jpg" alt="Foto 3" class="img-fluid rounded shadow hover-img" data-hover="3">
-                </div>
-                <div class="col-12">
-                    <img src="images/Fixed.jpg" alt="Foto 4" class="imag-fluid rounded shadow w-100 hover-img" data-hover="4">
-                </div>
-            </div>
-        </div>
+<section class="container my-5 bg-dark bg-opacity-75 p-4">
+  <h2 class="text-center text-white mb-4">Galería fotográfica</h2>
+  <div class="row g-4">
 
-<!--Recuadro de descripción-->
-            <aside class="col-md-4">
-                <div class="info-box p-3 bg-secondary bg-opacity-50 rounded h-100 position-relative">
-                    <div class="info-default position-absolute top-0 start-0 end-0 bottom-0 d-flex align-items-center justify-content-center text-center px-2">
-                        <p>
-                            ¿Quieres ver tu foto acá? Comparte tus imágenes y palabras con nosotros.
-                            Nuestro equipo seleccionará las más destacadas. 
-                            Si quieres ser parte de nuestros colaboradores, crea tu perfil y sube tu contenido.
-                        </p>
-                    </div>
-                </div>
-            </aside>
-        </div>
-    </section>
+    <!-- Columna Izquierda (Imagen 1) -->
+    <div class="col-12 col-md-4 d-flex flex-column align-items-center w-25">
+      <img src="images/FixedCastillo.jpg" class="img-fluid rounded shadow-sm mb-3" alt="Foto 1" data-bs-toggle="modal" data-bs-target="#fotoModal1">
+    </div>
+
+    <!-- Columna Central (Imágenes 2 y 3) -->
+    <div class="col-12 col-md-4 d-flex flex-column align-items-center">
+      <img src="images/BiciGeneral.jpg" class="img-fluid rounded shadow-sm mb-3" alt="Foto 2" data-bs-toggle="modal" data-bs-target="#fotoModal2">
+      <img src="images/BikeBlue.jpg" class="img-fluid rounded shadow-sm" alt="Foto 3" data-bs-toggle="modal" data-bs-target="#fotoModal3">
+    </div>
+
+    <!-- Columna Derecha (Imágenes 4 y 5) -->
+    <div class="col-12 col-md-4 d-flex flex-column align-items-center">
+      <img src="images/Fixed.jpg" class="img-fluid rounded shadow-sm mb-3" alt="Foto 4" data-bs-toggle="modal" data-bs-target="#fotoModal4">
+      <img src="images/fixed_1.jpg" class="img-fluid rounded shadow-sm" alt="Foto 5" data-bs-toggle="modal" data-bs-target="#fotoModal5">
+    </div>
+
+  </div>
+</section>
+
+    <!-- Modal Foto 1 -->
+<div class="modal fade" id="fotoModal1" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content bg-dark text-white">
+      <div class="modal-body text-center w-25">
+        <img src="images/FixedCastillo.jpg" class="img-fluid rounded" alt="Foto 1">
+        <p class="mt-3">Fotografía tomada durante el amanecer en la ruta del bosque.</p>
+        <a href="pages/multimedia.html" class="btn btn-light">Ir a galería</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Foto 2 -->
+<div class="modal fade" id="fotoModal2" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content bg-dark text-white">
+      <div class="modal-body text-center w-100">
+        <img src="images/BiciGeneral.jpg" class="img-fluid rounded" alt="Foto 2">
+        <p class="mt-3">Encuentro entre la ciudad y la naturaleza.</p>
+        <a href="pages/multimedia.html" class="btn btn-light">Ir a galería</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Foto 3 -->
+<div class="modal fade" id="fotoModal3" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content bg-dark text-white">
+      <div class="modal-body text-center w-100">
+        <img src="images/BikeBlue.jpg" class="img-fluid rounded" alt="Foto 3">
+        <p class="mt-3">El reflejo del atardecer en el lago.</p>
+        <a href="pages/multimedia.html" class="btn btn-light">Ir a galería</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Foto 4 -->
+<div class="modal fade" id="fotoModal4" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content bg-dark text-white">
+      <div class="modal-body text-center w-100">
+        <img src="images/Fixed.jpg" class="img-fluid rounded" alt="Foto 4">
+        <p class="mt-3">La parte divertida de trabajar es ir en bicicleta.</p>
+        <a href="pages/multimedia.html" class="btn btn-light">Ir a galería</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Foto 5 -->
+<div class="modal fade" id="fotoModal5" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content bg-dark text-white">
+      <div class="modal-body text-center w-100">
+        <img src="images/fixed_1.jpg" class="img-fluid rounded" alt="Foto 5">
+        <p class="mt-3">Crossing the jungle</p>
+        <a href="pages/multimedia.html" class="btn btn-light">Ir a galería</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  </div>
+</section>
+
 
     </main>
 
@@ -178,6 +228,8 @@ Animate a participar y comparte tu forma de ver el mundo sobre ruedas.
 <footer class="text-center text-white py-4 border-top border-secondary mt-5">
         © 2025 PedalSoul - Todos los derechos reservados.
 </footer>
+
+
 
 </body>
 </html>
